--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Where are jsp files? HERE!
 spring.mvc.view.prefix=/WEB-INF/
 # Data Persistence
-spring.datasource.url=jdbc:mysql://localhost:3306/grpup_pj_final?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/group_pj_final?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
