--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.mvc.view.prefix=/WEB-INF/
 # Data Persistence
 spring.datasource.url=jdbc:mysql://localhost:3306/group_pj_final?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=rootr00t
+spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
 # For Update and Delete method hidden inputs
 spring.mvc.hiddenmethod.filter.enabled=true
